[project]
name = "dashbootstrap02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-bootstrap-templates>=2.1.0",
    "dash-labs>=1.2.0",
    "datashader>=0.18.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
]
